文言とCSS変更
変更しました

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <header>
     <ul class="menu">
         <li>
-            <a href="#">院ふぃおメーション</a>
+            <a href="#">aaaa</a>
         </li>
         <li>
             <a href="#">商品情報</a>
